WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97930
Missing initializer in WebKitLoaderClient
https://bugs.webkit.org/show_bug.cgi?id=97930
Summary
Missing initializer in WebKitLoaderClient
Alberto Garcia
Reported
2012-09-28 12:30:39 PDT
../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp: In function ‘void attachLoaderClientToView(WebKitWebView*)’: ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:155:5: warning: missing initializer for member ‘WKPageLoaderClient::didLayout’ [-Wmissing-field-initializers] There's a new didLayout field in WKPageLoaderClient, the instance in WebKitLoaderClient is missing the initializer.
Attachments
Patch
(1.35 KB, patch)
2012-09-28 12:31 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2012-09-28 12:31:31 PDT
Created
attachment 166293
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-28 13:03:20 PDT
Comment on
attachment 166293
[details]
Patch Clearing flags on attachment: 166293 Committed
r129937
: <
http://trac.webkit.org/changeset/129937
>
WebKit Review Bot
Comment 3
2012-09-28 13:03:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug