WebKitLoaderClient: add missing initializer. https://bugs.webkit.org/show_bug.cgi?id=97930

Patch by Alberto Garcia <agarcia@igalia.com> on 2012-09-28
Reviewed by Martin Robinson.

WKPageLoaderClient is missing the initializer for the didLayout
field. Fixes -Wmissing-field-initializers.

* UIProcess/API/gtk/WebKitLoaderClient.cpp:
(attachLoaderClientToView):

Canonical link: https://commits.webkit.org/115942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129937 268f45cc-cd09-0410-ab3c-d52691b4dbfc